<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CanData_29bit_CX2500_M510" Id="{87e59b35-c6d0-0ff4-0dec-692cbde7af01}">
    <Declaration><![CDATA[TYPE ST_CanData_29bit_CX2500_M510 :
STRUCT
	ntransactionNumber : UINT;
	nLength: UINT; //values 0-8
	nCobid: DWORD; // bits0-28 CAN Cobid; bit 30 CAN RTR flag; bit 31 clear -> 11bit CAN Indentifier, set -> 29bit CAN Indentifier.
	aData: ARRAY[0..7] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>