<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_HwGetAddrInfo_29bit_CX2500_M510" Id="{b5a7888b-4d98-08b0-1922-0059968f8013}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'hide'}
FUNCTION F_HwGetAddrInfo_29bit_CX2500_M510 : ST_CanHeader
VAR_INPUT
	stInput: ST_CanData_29bit_CX2500_M510;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_HwGetAddrInfo_29bit_CX2500_M510.nCobid := 16#3FFFFFFF AND UDINT_TO_DWORD(stInput.nCobid);// limits cobid to max value

F_HwGetAddrInfo_29bit_CX2500_M510.bRTR := stInput.nCobid.30;// gets RTR bit

F_HwGetAddrInfo_29bit_CX2500_M510.bExtendedAddress := stInput.nCobid.31;//gets extended address flag, if set raw can message had 29bit for identification on the wire.

IF (stInput.nLength > 8) THEN
	F_HwGetAddrInfo_29bit_CX2500_M510.nMsgLength := 8;
ELSE
	F_HwGetAddrInfo_29bit_CX2500_M510.nMsgLength := stInput.nLength;
END_IF 
]]></ST>
    </Implementation>
    <LineIds Name="F_HwGetAddrInfo_29bit_CX2500_M510">
      <LineId Id="43" Count="10" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>